build uwp with zmq tests

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -121,7 +121,7 @@ environment:
       ARTIFACT_NAME: v141-gd-uwp
       CMAKE_SYSTEM_NAME: WindowsStore
       CMAKE_SYSTEM_VERSION: 10.0.18362
-      EXTRA_FLAGS: -DCMAKE_SYSTEM_NAME=%CMAKE_SYSTEM_NAME% -DCMAKE_SYSTEM_VERSION=%CMAKE_SYSTEM_VERSION% -DZMQ_BUILD_TESTS=OFF # can't generate tests on uwp platform
+      EXTRA_FLAGS: -DCMAKE_SYSTEM_NAME=%CMAKE_SYSTEM_NAME% -DCMAKE_SYSTEM_VERSION=%CMAKE_SYSTEM_VERSION%
     - platform: Win32-uwp
       configuration: Release
       WITH_LIBSODIUM: OFF
@@ -133,7 +133,7 @@ environment:
       ARTIFACT_NAME: v141-uwp
       CMAKE_SYSTEM_NAME: WindowsStore
       CMAKE_SYSTEM_VERSION: 10.0.18362
-      EXTRA_FLAGS: -DCMAKE_SYSTEM_NAME=%CMAKE_SYSTEM_NAME% -DCMAKE_SYSTEM_VERSION=%CMAKE_SYSTEM_VERSION% -DZMQ_BUILD_TESTS=OFF # can't generate tests on uwp platform
+      EXTRA_FLAGS: -DCMAKE_SYSTEM_NAME=%CMAKE_SYSTEM_NAME% -DCMAKE_SYSTEM_VERSION=%CMAKE_SYSTEM_VERSION%
 
 matrix:
   fast_finish: false
