Allow tests to fail until they are fixed for uwp

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -140,6 +140,7 @@ matrix:
   allow_failures:
     - platform: cygwin64 # TODO allow failures until tests are fixed
     - platform: mingw64  # TODO allow failures until tests are fixed
+    - platform: Win32-uwp  # TODO allow failures until tests are fixed
 
 init:
   - cmd: if "%NO_PR%"=="TRUE" (
