Problem: ws_engine uses unsafe strcpy
Solution: use strcpy_s instead (define custom if not available)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -460,6 +460,7 @@ if(NOT MSVC)
   check_cxx_symbol_exists(mkdtemp stdlib.h HAVE_MKDTEMP)
   check_cxx_symbol_exists(accept4 sys/socket.h HAVE_ACCEPT4)
   check_cxx_symbol_exists(strnlen string.h HAVE_STRNLEN)
+  check_cxx_symbol_exists(strlcpy string.h ZMQ_HAVE_STRLCPY)
 else()
   set(HAVE_STRNLEN 1)
 endif()
