--- a/builds/cmake/platform.hpp.in
+++ b/builds/cmake/platform.hpp.in
@@ -51,6 +51,7 @@
 #cmakedefine ZMQ_HAVE_PTHREAD_SET_AFFINITY
 #cmakedefine HAVE_ACCEPT4
 #cmakedefine HAVE_STRNLEN
+#cmakedefine ZMQ_HAVE_STRLCPY
 
 #cmakedefine ZMQ_HAVE_IPC
 
