Problem: ZMQ_HAVE_PTHREAD_SET_AFFINITY not set correctly
Solution: Set correct define in CMake check and add the cmakedefine

--- a/builds/cmake/platform.hpp.in
+++ b/builds/cmake/platform.hpp.in
@@ -48,6 +48,7 @@
 #cmakedefine ZMQ_HAVE_PTHREAD_SETNAME_2
 #cmakedefine ZMQ_HAVE_PTHREAD_SETNAME_3
 #cmakedefine ZMQ_HAVE_PTHREAD_SET_NAME
+#cmakedefine ZMQ_HAVE_PTHREAD_SET_AFFINITY
 #cmakedefine HAVE_ACCEPT4
 #cmakedefine HAVE_STRNLEN
 
