Problem: internal reimplementation of strlcpy used by default on Linux
Solution: use libbsd by default when available, and the internal implementation
only as a fallback, to take advantage of Linux distros maintenance of the
string libraries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,6 +138,25 @@ if (NOT DISABLE_WS)
   endif()
 endif()
 
+if(NOT MSVC)
+  find_package(PkgConfig)
+  option(WITH_LIBBSD "Use libbsd instead of builtin strlcpy" ON)
+  if (WITH_LIBBSD)
+    pkg_check_modules(LIBBSD "libbsd")
+    if (LIBBSD_FOUND)
+      message(STATUS "Using libbsd")
+      include_directories(${LIBBSD_INCLUDE_DIRS})
+      set(pkg_config_names_private "${pkg_config_names_private} libbsd")
+      set(ZMQ_HAVE_LIBBSD 1)
+      link_directories(${LIBBSD_LIBRARY_DIRS})
+      set(OPTIONAL_LIBRARIES ${LIBBSD_LIBRARIES})
+    endif()
+  endif()
+  if (NOT WITH_LIBBSD OR NOT LIBBSD_FOUND)
+    check_cxx_symbol_exists(strlcpy string.h ZMQ_HAVE_STRLCPY)
+  endif()
+endif()
+
 
 # Select curve encryption library, defaults to tweetnacl
 # To use libsodium instead, use --with-libsodium(must be installed)
@@ -460,7 +479,6 @@ if(NOT MSVC)
   check_cxx_symbol_exists(mkdtemp stdlib.h HAVE_MKDTEMP)
   check_cxx_symbol_exists(accept4 sys/socket.h HAVE_ACCEPT4)
   check_cxx_symbol_exists(strnlen string.h HAVE_STRNLEN)
-  check_cxx_symbol_exists(strlcpy string.h ZMQ_HAVE_STRLCPY)
 else()
   set(HAVE_STRNLEN 1)
 endif()
@@ -661,7 +679,6 @@ else()
       "Name pkg-config shall use to find openpgm libraries and include paths"
       FORCE)
 
-    find_package(PkgConfig)
     pkg_check_modules(OPENPGM  ${OPENPGM_PKGCONFIG_NAME})
 
     if(OPENPGM_FOUND)
