--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,21 +42,22 @@ lib-build-windows:
   script:
     - IF "%VS_VERSION_YEAR%"=="" (ECHO ">> VS_VERSION_YEAR must be defined on the Runner side <<" && EXIT /B 1)
     - IF "%VS_VERSION_NUM%"=="" (ECHO ">> VS_VERSION_NUM must be defined on the Runner side <<" && EXIT /B 1)
+    - set INITIAL_PATH=%PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\include
     - net use %DEPLOYMENT_WINDOWS_NET_SHARE% /user:%DEPLOYMENT_WINDOWS_USER% %DEPLOYMENT_WINDOWS_PASSWORD%
     - mkdir build && cd build
-    - set PATH=%PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x86
+    - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x86
     - cmake -S .. -B DebugX86 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR%" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build DebugX86 --target ALL_BUILD --config Debug
-    - set PATH=%PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x86
+    - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x86
     - cmake -S .. -B ReleaseX86 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR%" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build ReleaseX86 --target ALL_BUILD --config Release
-    - set PATH=%PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x64
+    - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x64
     - cmake -S .. -B DebugX64 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR%" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build DebugX64 --target ALL_BUILD --config Debug
-    - set PATH=%PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x64
+    - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x64
     - cmake -S .. -B ReleaseX64 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR%" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build ReleaseX64 --target ALL_BUILD --config Release
-    - copy /y ..\include\*.h "%builds_root%\include\" > nul
+    - copy /y ..\include\*.h "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\include\" > nul
     - copy /y "DebugX86\bin\Debug\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x86\"
     - copy /y "DebugX86\lib\Debug\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x86\"
     - copy /y "ReleaseX86\bin\Release\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x86\"
