--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,10 +52,10 @@ lib-build-windows:
     - cmake -S .. -B ReleaseX86 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR%" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build ReleaseX86 --target ALL_BUILD --config Release
     - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x64
-    - cmake -S .. -B DebugX64 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR%" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
+    - cmake -S .. -B DebugX64 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR% Win64" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build DebugX64 --target ALL_BUILD --config Debug
     - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x64
-    - cmake -S .. -B ReleaseX64 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR%" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
+    - cmake -S .. -B ReleaseX64 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR% Win64" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build ReleaseX64 --target ALL_BUILD --config Release
     - copy /y ..\include\*.h "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\include\" > nul
     - copy /y "DebugX86\bin\Debug\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x86\"
