Revert "Problem: nuget internal metadata not maintained, no relicense"
Relicense grant received.

This reverts commit d2a8be8da72f893d23a611bff0ba09e3ee9872e1.

--- a/builds/Makefile.am
+++ b/builds/Makefile.am
@@ -25,6 +25,8 @@ EXTRA_DIST = \
 	valgrind/ci_build.sh \
 	valgrind/valgrind.supp \
 	valgrind/vg \
+	nuget/readme.nuget \
+	nuget/libzmq.autopkg \
 	android/Dockerfile \
 	android/README.md \
 	android/android_build_helper.sh \
