add option to stop trying to reconnect on ECONNREFUSED (#3831)
* add option to stop trying to reconnect on ECONNREFUSED

--- a/Makefile.am
+++ b/Makefile.am
@@ -1039,7 +1039,8 @@ test_apps += tests/test_poller \
 	tests/test_app_meta \
 	tests/test_xpub_manual_last_value \
 	tests/test_router_notify \
-	tests/test_peer
+	tests/test_peer \
+	tests/test_reconnect_options
 
 tests_test_poller_SOURCES = tests/test_poller.cpp
 tests_test_poller_LDADD = ${TESTUTIL_LIBS} src/libzmq.la
@@ -1084,6 +1085,10 @@ tests_test_router_notify_CPPFLAGS = ${TESTUTIL_CPPFLAGS}
 tests_test_peer_SOURCES = tests/test_peer.cpp
 tests_test_peer_LDADD = ${TESTUTIL_LIBS} src/libzmq.la
 tests_test_peer_CPPFLAGS = ${TESTUTIL_CPPFLAGS}
+
+tests_test_reconnect_options_SOURCES = tests/test_reconnect_options.cpp
+tests_test_reconnect_options_LDADD = ${TESTUTIL_LIBS} src/libzmq.la
+tests_test_reconnect_options_CPPFLAGS = ${TESTUTIL_CPPFLAGS}
 endif
 
 if ENABLE_STATIC
