--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,10 @@
 # Define job order
 stages:
   - lib-build
-  
-# Define library files
-.lib-build-files: &lib-build-files
-  only:
-    refs:
-      - master
+
 
 # Create library for macos
 lib-build-macos:
-  <<: *lib-build-files
   stage: lib-build
   tags:
     - osx
@@ -31,45 +25,49 @@ lib-build-macos:
     name: "lib-build-macos"
     expire_in: 1 day
   dependencies: []
+  only:
+    refs:
+      - master
   
 # Create library for windows
 # Library will be build for 4 targets : Debug x86, Debug x64, Release x86, Release x64
 lib-build-windows:
-  <<: *lib-build-files
   stage: lib-build
   tags:
     - windows
   script:
-    - IF "%VS_VERSION_YEAR%"=="" (ECHO ">> VS_VERSION_YEAR must be defined on the Runner side <<" && EXIT /B 1)
-    - IF "%VS_VERSION_NUM%"=="" (ECHO ">> VS_VERSION_NUM must be defined on the Runner side <<" && EXIT /B 1)
-    - set INITIAL_PATH=%PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\include
-    - net use %DEPLOYMENT_WINDOWS_NET_SHARE% /user:%DEPLOYMENT_WINDOWS_USER% %DEPLOYMENT_WINDOWS_PASSWORD%
-    - mkdir build && cd build
-    - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x86
+    - IF (!$env:VS_VERSION_YEAR) { ECHO ">> VS_VERSION_YEAR must be defined on the Runner side <<" ; EXIT 1 }
+    - IF (!$env:VS_VERSION_NUM) { ECHO ">> VS_VERSION_NUM must be defined on the Runner side <<" ; EXIT 1 }
+    - $env:INITIAL_PATH="$env:PATH;$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\include"
+    - mkdir build
+    - cd build
+    - $env:PATH="$env:INITIAL_PATH;$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Debug\x86"
     - cmake -S .. -B DebugX86 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR%" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build DebugX86 --target ALL_BUILD --config Debug
-    - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x86
+    - $env:PATH="$env:INITIAL_PATH;$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Release\x86"
     - cmake -S .. -B ReleaseX86 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR%" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build ReleaseX86 --target ALL_BUILD --config Release
-    - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x64
+    - $env:PATH="$env:INITIAL_PATH;$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Debug\x64"
     - cmake -S .. -B DebugX64 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR% Win64" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build DebugX64 --target ALL_BUILD --config Debug
-    - set PATH=%INITIAL_PATH%;%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x64
+    - $env:PATH="$env:INITIAL_PATH;$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Release\x64"
     - cmake -S .. -B ReleaseX64 -G"Visual Studio %VS_VERSION_NUM% %VS_VERSION_YEAR% Win64" -DBUILD_TESTS=OFF -DWITH_LIBSODIUM=ON -DBUILD_STATIC=OFF
     - cmake --build ReleaseX64 --target ALL_BUILD --config Release
-    - copy /y ..\include\*.h "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\include\" > nul
-    - copy /y "DebugX86\bin\Debug\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x86\"
-    - copy /y "DebugX86\lib\Debug\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x86\"
-    - copy /y "ReleaseX86\bin\Release\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x86\"
-    - copy /y "ReleaseX86\lib\Release\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x86\"
-    - copy /y "DebugX64\bin\Debug\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x64\"
-    - copy /y "DebugX64\lib\Debug\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Debug\x64\"
-    - copy /y "ReleaseX64\bin\Release\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x64\"
-    - copy /y "ReleaseX64\lib\Release\libzmq*" "%DEPLOYMENT_WINDOWS_NET_SHARE%\Builds\Release\x64\"
+    - copy ..\include\*.h "$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\include\" -Force
+    - copy "DebugX86\bin\Debug\libzmq*" "$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Debug\x86\" -Force
+    - copy "DebugX86\lib\Debug\libzmq*" "$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Debug\x86\" -Force
+    - copy "ReleaseX86\bin\Release\libzmq*" "$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Release\x86\" -Force
+    - copy "ReleaseX86\lib\Release\libzmq*" "$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Release\x86\" -Force
+    - copy "DebugX64\bin\Debug\libzmq*" "$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Debug\x64\" -Force
+    - copy "DebugX64\lib\Debug\libzmq*" "$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Debug\x64\" -Force
+    - copy "ReleaseX64\bin\Release\libzmq*" "$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Release\x64\" -Force
+    - copy "ReleaseX64\lib\Release\libzmq*" "$env:DEPLOYMENT_WINDOWS_NET_SHARE\Builds\Release\x64\" -Force
+  only:
+    refs:
+      - master
 
 # Create library for linux
 lib-build-linux:
-  <<: *lib-build-files
   stage: lib-build
   image: ingescape/debian-testing-compil
   tags:
@@ -90,4 +88,6 @@ lib-build-linux:
     name: "lib-build-linux-x64"
     expire_in: 1 day
   dependencies: []
-
+  only:
+    refs:
+      - master
